--- a/WebDevAssign2/WebDevAssign2/Views/Shared/_Layout.cshtml
+++ b/WebDevAssign2/WebDevAssign2/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Shop by Category", "Index", "Categories")</li>
                     <li>@Html.RouteLink("View all our Products", "ProductsIndex")</li>
+                    <li>@Html.ActionLink("Manage Images", "Index", "ProductImages")</li>
                 </ul>
                 @using (Html.BeginRouteForm("ProductsIndex", FormMethod.Get, new  {@class = "navbar-form navbar-left" }))
                 {
@@ -43,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Ryan Slack, Isaac Clancy</p>
         </footer>
     </div>
 
